# rumi

./: .env.example  .gitignore  DEVELOPMENT.md  PROGRESS.md  PROJECT.md  README.md  RUMI_SETUP_COMPLETE.md  old_conversation.md  overview.md  project_readme.md  pyproject.toml  requirements.txt
.claude/: instructions.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/rumi_content/0/: newest_clocks.json
qdrant_storage/collections/rumi_content/0/segments/1436d7a7-a369-41f3-98f8-c1417994da3a/: mutable_id_tracker.mappings
qdrant_storage/collections/test_collection/0/: newest_clocks.json  replica_state.json
scripts/: chat_with_rumi.py  check_agent_api.py  check_letta_api.py  check_tools_api.py  create_fresh_test_agent.py  create_rumi_agent.py  create_test_agent.py  create_test_agent_v2.py  debug_response.py  fix_tool_descriptions.py  inspect_agent_tools.py  inspect_messages.py  inspect_tool.py  recreate_tools.py  register_qdrant_tools.py  register_tools_with_letta.py  start_letta_server.sh  sync_blog_to_qdrant.py  test_agent_v2.py  test_blog_fetch.py  test_chunking_with_blog.py  test_classification.py  test_config.py  test_embeddings_with_blog.py  test_fresh_agent.py  test_letta_providers.py  test_qdrant.py  test_qdrant_client.py  test_rumi_blog_search.py  test_rumi_conversation.py  test_search.py  test_tools_directly.py  update_rumi_with_tools.py  update_tool_source.py
src/agent/: custom_tools.py  letta_agent.py
src/agents/: __init__.py  letta_client.py  qdrant_tools.py  tools.py
src/api/: main.py
src/config/: logger.py  settings.py
src/ingestion/: auth.py  blog.py  browser.py  fathom.py  linkedin.py  twitter.py
src/processing/: classifier.py  enricher.py
src/storage/: bedrock_client.py  chunking.py  embeddings.py  qdrant_client.py  state_manager.py
(+28 files in other folders)
